# TinyEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
OpenGL/Include/glad/: glad.h
OpenGL/Libs/: glfw3.lib
TinyEngine/: CMakeLists.txt  TinyEngine.cpp  VertexData.h  glad.c  shader.fs  shader.h  shader.vs
